# nba-data-api

./: .bandit  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  TODO.md  app.py  cdk.json  cliff.toml  practice.code-workspace  pyproject.toml  zensical.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  dependency-audit.yml  docs.yml
data/: NBA_Player_Data.csv
docs/: api.html  architecture.drawio  cdk_stack.md  dynamodb_schema.md  hello_world_app.md  hello_world_frontend_stack.md  hello_world_waf_stack.md  index.md  lambda_handler.md  nag_utils.md  nba-data-api-architecture.drawio
frontend/: index.html
hello_world/: __init__.py  hello_world_app.py  hello_world_frontend_stack.py  hello_world_stack.py  hello_world_stage.py  hello_world_waf_stack.py  nag_utils.py
lambda/: app.py  requirements.txt
lambda_importer/: __init__.py  app.py  requirements.txt
scripts/: deps_merge.sh  generate_openapi.py
tests/: __init__.py  conftest.py
tests/cdk/: test_stacks.py
tests/integration/: __init__.py  test_api_gateway.py  test_frontend.py
tests/unit/: __init__.py  conftest.py  test_handler.py
